--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>G3 - architecure</title>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar">
-            <h3>G3 Architects</h3>
+    <header class=" bg-light work-sans-font ">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="#" class="nav-link color-gray">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link color-gray">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link color-gray">Contat US</a></li>
+                <li class="nav-item"><a href="#" class="nav-link color-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="banner-des color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="primary-button">Explore More</button>
+            </div>
+            <img class="banner-img" src="./g3-architects-resources/images/banner.png" alt="">
+
+        </div>
     </header>
     <main>
 
@@ -19,4 +38,5 @@
 
     </footer>
 </body>
+
 </html>
