--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
         </div>
     </header>
     <main>
+        <section class="teams">
+            <div class="teams-picture">
+                <img src="./g3-architects-resources/images/team1.png" alt="">
+                <img src="./g3-architects-resources/images/team2.png" alt="">
+                <img src="./g3-architects-resources/images/team3.png" alt="">
+                <img src="./g3-architects-resources/images/team4.png" alt="">
+            </div>
+            <div class="teams-features">
+                <h3 class="feture-title work-sans-font">
+                    <span class="Quick-style color-light-gray">Quick list</span> of Our <span class="Quick-style2">Features</span>
+                </h3>
+                <p class="feture-des color-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="primary-button">
+                    Explore More
+                </button>
+            </div>
+        </section>
 
     </main>
     <footer>
