--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-                <p class="banner-des color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
-                have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                <p class="banner-des color-light-gray">There are many variations of passages of Lorem Ipsum available,
+                    but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button class="primary-button">Explore More</button>
             </div>
@@ -41,21 +42,113 @@
             </div>
             <div class="teams-features">
                 <h3 class="feture-title work-sans-font">
-                    <span class="Quick-style color-light-gray">Quick list</span> of Our <span class="Quick-style2">Features</span>
+                    <span class="Quick-style color-light-gray">Quick list</span> of Our <span
+                        class="Quick-style2">Features</span>
                 </h3>
                 <p class="feture-des color-light-gray">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button class="primary-button">
                     Explore More
                 </button>
             </div>
         </section>
+        <section class="love display-flex">
+            <div class="love-continer">
+                <h3 class="love-title work-sans-font">Features you  <br>will love & enjoy</h3>
+                <p class="love-des work-sans-font color-light-gray">
+                There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration in some form, by injected humour, or <br> randomised words which don't look even
+                </p>
+                <div class="love-cards">
+                    <div class="card work-sans-font">
+                        <h4 class="card-title">Dexktop & Mobile Version</h4>
+                        <p class="card-des work-sans-font color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card work-sans-font">
+                        <h4 class="card-title">Drag & Drop Builder</h4>
+                        <p class="card-des work-sans-font color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card work-sans-font">
+                        <h4 class="card-title">Awesome Modern Design</h4>
+                        <p class="card-des work-sans-font color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card work-sans-font">
+                        <h4 class="card-title">Super Easy to Edit</h4>
+                        <p class="card-des work-sans-font color-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
 
+            </div>
+            <div class="love-img">
+                <img src="./g3-architects-resources/images/architect.png" alt="">
+                <button id="exp-badge" class="primary-button work-sans-font">
+                    <span id="exp-years">10+Year</span> <br>
+                    <span>Experience</span>
+                    
+                </button>
+            </div>
+
+            
+        </section>
+        <!-- fact section -->
+        <section class="fact">
+            <h3 class="fact-titile work-sans-font">
+                Some Facts
+            </h3>
+            <p class="fact-dess work-sans-font ">
+                There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                alteration.
+            </p>
+            <div class="fact-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./g3-architects-resources/images/icons/ribon.png" alt="" class="fact-img">
+                        <h3 class="fact-number work-sans-font">54</h3>
+                        <h5 class="fact-des work-sans-font color-light-gray">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./g3-architects-resources/images/icons/projects.png" alt="" class="fact-img">
+                        <h3 class="fact-number work-sans-font">1458</h3>
+                        <h5 class="fact-des work-sans-font color-light-gray">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./g3-architects-resources/images/icons/customers.png" alt="" class="fact-img">
+                        <h3 class="fact-number work-sans-font">590</h3>
+                        <h5 class="fact-des work-sans-font color-light-gray">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./g3-architects-resources/images/icons/email.png" alt="" class="fact-img">
+                        <h3 class="fact-number work-sans-font">22578</h3>
+                        <h5 class="fact-des work-sans-font color-light-gray">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- sponsorship section start here -->
+         <section class="sponsor">
+            <h3 class="sponcor-title work-sans-font">Our Sponspors</h3>
+            <p class="sponsor-des work-sans-font">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="sponsor-contain">
+                <img src="./g3-architects-resources/images/sponsors/amazon.png" alt="" class="sponsor-img">
+                <img src="./g3-architects-resources/images/sponsors/figma.png" alt="" class="sponsor-img">
+                <img src="./g3-architects-resources/images/sponsors/google.png" alt="" class="sponsor-img">
+                <img src="./g3-architects-resources/images/sponsors/spotify.png" alt="" class="sponsor-img">
+                <img src="./g3-architects-resources/images/sponsors/telerama.png" alt="" class="sponsor-img">
+            </div>
+         </section>
     </main>
-    <footer>
-
+    <footer class="pager-footer display-flex work-sans-font">
+          <div>
+            <p>All rights reserved &copy;2023 Startup Landing Page Design</p>
     </footer>
+          </div>
 </body>
 
 </html>
